# FPy

./: .gitignore  LICENSE  README.md  pension_factor.py  pyproject.toml  requirements.txt  requirements_google_api.txt  requirements_test.txt  setup.py
FPy/: calc_income_tax.py  calc_lifetime_ratio.py  calc_required_savings.py  compound_interest_factor.py  income_growth.py  price_sim.py  social_insurance_premium.py  tsumitate_simulation.py
examples/: s01_interest_factor.ipynb  s02_bond.ipynb  s03_loan.ipynb  s04_lifecycle_investment.ipynb
fpy_datareader/: estat.py
fpyjp/: balance_simulator.py  family.py  interest_factor.py
fpyjp/core/: balance_simulator.py  interest_factor.py  loan_simulator.py
fpyjp/old/: calc_income_tax.py  compound_interest_factor.py
fpyjp/schemas/: balance.py  cashflow.py  loan.py
fpyjp/utils/: list_utils.py  math_utils.py
tests/: test_asset_liability_simulator.py  test_asset_liability_simulator_with_google_sheets.py  test_balance.py  test_interest_factor.py  test_lifecycle_investment.py  test_list_utils.py  test_loan.py  test_utils.py
