[project]
name = "fpyjp"
version = "0.0.3"
description = ""
authors = [
    {name = "well-living"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

