[project]
name = "fpyjp"
version = "0.0.5"
description = ""
authors = [
    {name = "well-living"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/well-living/FPy"
"Bug Tracker" = "https://github.com/well-living/FPy/issues"
"Source" = "https://github.com/well-living/FPy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

